Adicionado: > Classe Usuario > UsuarioViewModel > Navigation de Login > Fragment de Cadastro > Layout de fragment_cadastro.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,7 @@
     <string name="textoSenha">Senha</string>
     <string name="textoCadastrar">Novo por aqui? Cadastre-se!</string>
     <string name="btnLogin">Login</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
