--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,4 +50,6 @@
     <string name="ddd">DDD</string>
     <string name="nomecompleto">Nome completo</string>
 
+    <string name="versao">0.1</string>
+
 </resources>
