--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,9 +19,11 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
 
+
     <string name="menu_home">Home</string>
-    <string name="menu_gallery">Home</string>
-    <string name="menu_slideshow">Home</string>
+    <string name="menu_search">Pesquisar</string>
+    <string name="menu_gallery">Gallery</string>
+    <string name="menu_slideshow">Slideshow</string>
     <string name="menu_mudarSenha">Alterar senha</string>
     <string name="menu_mudarFotoPerfil">Alterar foto </string>
     <string name="menu_mudarApelido">Alterar Apelido</string>
