--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,5 +53,8 @@
     <string name="nomecompleto">Nome completo</string>
 
     <string name="version">1.0</string>
+    <string name="nome_da_m_sica">Nome da música</string>
+    <string name="cantor_a_banda">Cantor(a)/Banda: </string>
+    <string name="album">Album: </string>
 
 </resources>
